After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703775 - ContactSearch is not clear when it is no supported
ContactSearch is not clear when it is no supported
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-08 09:52 UTC by Xavier Claessens
Modified: 2013-07-08 11:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EmpathyContactSearchDialog: factor out append_message_page() (2.80 KB, patch)
2013-07-08 10:29 UTC, Xavier Claessens
accepted-commit_now Details | Review
EmpathyContactSearchDialog: Add a "Not Supported" message page (2.30 KB, patch)
2013-07-08 10:29 UTC, Xavier Claessens
accepted-commit_now Details | Review
EmpathyContactSearchDialog: Set line wrap on message pages instead of ellipsize (1.00 KB, patch)
2013-07-08 10:29 UTC, Xavier Claessens
accepted-commit_now Details | Review
EmpathySearchContactDialog: Set search entry insensitive when search is not supported (1.32 KB, patch)
2013-07-08 10:29 UTC, Xavier Claessens
accepted-commit_now Details | Review

Description Xavier Claessens 2013-07-08 09:52:55 UTC
For protocols where ContactSearch is not supported at all, the account is unsensitive in the combobox. I think that case is good enough.

For XMPP however, it is supported, but not on all servers. Notably Google does not provide a contact search server and empathy does not provide an UI to define a server. In that case requesting the channel fails and empathy-contact-search-dialog just let the "Find" button unsensitive with not message to the user of what's going on.

I don't think any user will type its own search server, that's probably why that UI is commented out in the code. But a clear message should be displayed to the user.
Comment 1 Xavier Claessens 2013-07-08 10:29:08 UTC
Created attachment 248602 [details] [review]
EmpathyContactSearchDialog: factor out append_message_page()
Comment 2 Xavier Claessens 2013-07-08 10:29:11 UTC
Created attachment 248603 [details] [review]
EmpathyContactSearchDialog: Add a "Not Supported" message page
Comment 3 Xavier Claessens 2013-07-08 10:29:14 UTC
Created attachment 248604 [details] [review]
EmpathyContactSearchDialog: Set line wrap on message pages instead of ellipsize
Comment 4 Xavier Claessens 2013-07-08 10:29:17 UTC
Created attachment 248605 [details] [review]
EmpathySearchContactDialog: Set search entry insensitive when search is not supported

There is no point in letting user type something if the search
button is insensitive anyway.
Comment 5 Guillaume Desmottes 2013-07-08 10:41:21 UTC
Review of attachment 248602 [details] [review]:

++
Comment 6 Guillaume Desmottes 2013-07-08 10:42:42 UTC
Review of attachment 248603 [details] [review]:

++
Comment 7 Guillaume Desmottes 2013-07-08 10:42:53 UTC
Review of attachment 248604 [details] [review]:

++
Comment 8 Guillaume Desmottes 2013-07-08 10:43:10 UTC
Review of attachment 248605 [details] [review]:

++
Comment 9 Xavier Claessens 2013-07-08 11:40:03 UTC
Merged in master.