EmpathyContactSearchDialog: factor out append_message_page()

https://bugzilla.gnome.org/show_bug.cgi?id=703775